# astrochem_embedding

./: .cookiecutter.json  .gitignore  CITATION.cff  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  MANIFEST.in  README.rst  environment.yml  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  pypi-publish.yml  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt  usage.rst
models/: VICGAE.ckpt  translator.yml
scripts/: convert_tokens.py  generate_molecules_from_kida.py  preprocess_data.py  test.py  train.py
scripts/tb_logs/AstrochemEmbedder/version_0/: events.out.tfevents.1637003929.herzberg.2171434.0
scripts/tb_logs/AstrochemEmbedder/version_1/: events.out.tfevents.1637004171.herzberg.2259515.0
scripts/tb_logs/AstrochemEmbedder/version_10/: events.out.tfevents.1637006417.herzberg.2437460.0
scripts/tb_logs/AstrochemEmbedder/version_11/: events.out.tfevents.1637010631.herzberg.2443094.0
scripts/tb_logs/AstrochemEmbedder/version_12/: events.out.tfevents.1637010661.herzberg.2443237.0
scripts/tb_logs/AstrochemEmbedder/version_13/: events.out.tfevents.1637010711.herzberg.2443386.0
scripts/tb_logs/AstrochemEmbedder/version_14/: events.out.tfevents.1637010741.herzberg.2443516.0
scripts/tb_logs/AstrochemEmbedder/version_15/: events.out.tfevents.1637010758.herzberg.2443618.0
scripts/tb_logs/AstrochemEmbedder/version_16/: events.out.tfevents.1637010777.herzberg.2443742.0
scripts/tb_logs/AstrochemEmbedder/version_17/: events.out.tfevents.1637011705.herzberg.2444962.0
scripts/tb_logs/AstrochemEmbedder/version_2/: events.out.tfevents.1637004914.herzberg.2260923.0  hparams.yaml
scripts/tb_logs/AstrochemEmbedder/version_3/: events.out.tfevents.1637005632.herzberg.2349063.0
scripts/tb_logs/AstrochemEmbedder/version_4/: events.out.tfevents.1637005648.herzberg.2349193.0  hparams.yaml
scripts/tb_logs/AstrochemEmbedder/version_5/: events.out.tfevents.1637005668.herzberg.2349316.0  hparams.yaml
scripts/tb_logs/AstrochemEmbedder/version_6/: events.out.tfevents.1637005787.herzberg.2349658.0
scripts/tb_logs/AstrochemEmbedder/version_7/: events.out.tfevents.1637006007.herzberg.2350025.0
scripts/tb_logs/AstrochemEmbedder/version_8/: events.out.tfevents.1637006041.herzberg.2350167.0
scripts/tb_logs/AstrochemEmbedder/version_9/: events.out.tfevents.1637006360.herzberg.2437287.0  hparams.yaml
src/astrochem_embedding/: __init__.py  __main__.py  utils.py
src/astrochem_embedding/layers/: __init__.py  layers.py
src/astrochem_embedding/models/: __init__.py  layers.py  models.py
src/astrochem_embedding/models/pretrained/: VICGAE.ckpt  VICGAE.pkl  translator.yml
src/astrochem_embedding/models/tests/: test_models.py
src/astrochem_embedding/pipeline/: __init__.py  data.py  transforms.py
src/astrochem_embedding/tests/: test_utils.py
