[tool.poetry]
name = "astrochem_embedding"
version = "0.1.1"
description = "Language models for astrochemistry"
authors = ["Kelvin Lee <kin.long.kelvin.lee@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/laserkelvin/astrochem_embedding"
repository = "https://github.com/laserkelvin/astrochem_embedding"
documentation = "https://astrochem_embedding.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
include = ["models/VICGAE.ckpt", "models/translator.yml"]

[tool.poetry.urls]
Changelog = "https://github.com/laserkelvin/astrochem_embedding/releases"

[tool.poetry.dependencies]
python = "^3.8.0"
click = "^8.0.1"
palettable = "^3.3.0"
wandb = "^0.12.2"
torchinfo = "^1.5.3"
pytorch-lightning = "^1.4.8"
ipython = "^7.28.0"
torch = "^1.10.0"
torchvision = "^0.11.0"
rdkit-pypi = "^2021.9.2"
selfies = "^2.0.0"
pandas = "^1.3.4"
scikit-learn = "^1.0.1"
"ruamel.yaml" = "^0.17.17"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.4"}
safety = "^1.10.3"
typeguard = "^2.12.1"
xdoctest = {extras = ["colors"], version = "^0.15.5"}
sphinx = "^4.1.2"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
black = "^21.10b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.0"
reorder-python-imports = "^2.6.0"
pre-commit-hooks = "^4.0.1"
sphinx-rtd-theme = "^1.0.0"
sphinx-click = "^3.0.1"
Pygments = "^2.9.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["astrochem_embedding"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

