[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "astrochem_embedding"
description = "Language models for astrochemistry"
authors = [
    {name = "Kelvin Lee", email = "kin.long.kelvin.lee@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dynamic = ["version", "readme"]
keywords = ["astrochemistry", "nlp", "self-supervised-learning"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "click>=8.0.1",
    "palettable>=3.3.0",
    "wandb>=0.12.2",
    "torchinfo>=1.5.3",
    "pytorch-lightning>=1.4.8",
    "rdkit-pypi>=2021.9.2",
    "selfies>=2.0.0",
    "ruamel.yaml>=0.17.17",
    "scikit-learn>=1.0.1",
    "pandas>=1.3.4",
    "torch>=1.13.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.4",
    "coverage",
    "safety>=1.10.3",
    "flake8>=3.9.2",
    "black>=21.10b0",
    "flake8-bandit>=2.1.2",
    "flake8-bugbear>=21.4.3",
    "flake8-docstrings>=1.6.0",
    "pre-commit-hooks>=4.0.1",
    "isort"
]


[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["astrochem_embedding"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.setuptools.dynamic]
version = {attr = "astrochem_embedding.__version__"}
readme = {file = "README.rst"}

